# VSS

./: .gitignore  Cargo.toml  LICENSE  README.md
libs/ffmpeg/: README.txt
libs/ffmpeg/doc/: ffmpeg-all.html  ffplay-all.html  ffprobe-all.html
libs/mediamtx/: mediamtx.yml
src/: main.rs  updater.rs
